--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "map",
+  "name": "coords-parser",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A minimal Electron application",
+  "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron .",
+    "build-win": "electron-packager . --overwrite=true --asar --platform=win32 --arch=ia32 --icon=src/assets/icons/icon.ico --prune=true --out=release-builds"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "exceljs": "^3.2.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+  "repository": "https://github.com/electron/electron-quick-start",
+  "keywords": [
+    "Electron",
+    "quick",
+    "start",
+    "tutorial",
+    "demo"
+  ],
+  "author": "GitHub",
+  "license": "CC0-1.0",
+  "devDependencies": {
+    "electron": "^7.1.9",
+    "electron-packager": "^14.2.0"
   }
 }
