--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "coords-parser",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Application for parsing coordinates from Google Geocoding API",
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
     "build-win": "electron-packager . --overwrite=true --asar --platform=win32 --arch=ia32 --icon=src/assets/icons/icon.ico --prune=true --out=release-builds"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "repository": "https://github.com/stolenwhale/coords-parser",
+  "author": "StolenWhale",
+  "license": "",
   "devDependencies": {
     "electron": "^7.1.9",
     "electron-packager": "^14.2.0"
+  },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "copy-to-clipboard": "^3.2.0"
   }
 }
