--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
-    "build-win": "electron-packager . --overwrite=true --asar --platform=win32 --arch=ia32 --icon=src/assets/icons/icon.ico --prune=true --out=release-builds"
+    "build-win": "electron-packager . --overwrite --asar --platform=win32 --arch=ia32 --icon=src/assets/icons/icon.ico --prune=true --out=release-builds",
+    "build-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
+    "build-linux": "electron-packager . --overwrite --asar=true --platform=linux --arch=x64 --prune=true --out=release-builds"
   },
   "repository": "https://github.com/stolenwhale/coords-parser",
   "author": "StolenWhale",
